# archives

./: README.md
src/ai/src/: die_roll.py
src/asm/bootloader/: README.md  boot.asm
src/bash/ip/: README.md  ipsweep.sh
src/basicauth/: main.js  package-lock.json  package.json
src/c-interpreter/: Makefile
src/c-shell/include/: csh_header.h
src/c-shell/src/: csh_loop.c
src/c/c-shell/: Makefile
src/c/hellopkg/: README
src/c/ls/: README.md  ls  ls.c
src/c/opencv/: CMakeLists.txt
src/c/shell/: README.md
src/c/texteditor/: Makefile
src/c/vector/: README.md  main  main.c
src/cpp/multithreading/: README.md
src/cpp/probability/: main.cpp
src/frontend/: index.html
src/java-interpreter/: settings.gradle.kts
src/java/java-interpreter/: .project
src/js-graphql/client/: package-lock.json
src/js-graphql/server/: app.config.js  index.js  package-lock.json  package.json
src/js/basicauth/: axios.config.js  main.js  style.css  vite.config.js
src/js/expo-app/: App.js  package-lock.json  package.json
src/js/expo-cam/: App.js  app.json  package-lock.json  (+1 more)
src/nextjs-crud/: package-lock.json  package.json
src/nextjs-mongodb/: .env.sample  package-lock.json  package.json
src/node-frontend/: index.html  package-lock.json  package.json  webpack.config.js
src/nodejs/: config.js  index.js  package.json
src/nodejs-esm/: package.json
src/nodejs-server/: package-lock.json  package.json
src/opencv/: .gitignore  CMakeLists.txt
src/opencv/src/: DisplayImage.cpp  display_images.cpp  hello_world.cpp  play_video.cpp  show_image.cpp  video_controls.cpp  video_info.cpp
src/parcel/: package-lock.json  package.json
src/python/cli/stopwatch/: README.md  pyproject.toml  requirements.txt
src/python/cli/stopwatch/stopwatch/: __init__.py  main.py  stopwatch.py  stopwatch.tcss
src/quiz/: package-lock.json  package.json
src/todo/: package-lock.json
src/vite/: main.js  package-lock.json  package.json  style.css
src/weather/: index.html
src/webpack/: package-lock.json  package.json  webpack.config.js
(+557 files in other folders)
