cmake_minimum_required(VERSION 2.8)
project( opencv )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( display_image src/display_image.cpp )
add_executable( hello_world src/hello_world.cpp )
add_executable( show_image src/show_image.cpp )
target_link_libraries( display_image ${OpenCV_LIBS} )
target_link_libraries( hello_world ${OpenCV_LIBS} )
target_link_libraries( show_image ${OpenCV_LIBS} )